--- a/package.json
+++ b/package.json
@@ -13,6 +13,11 @@
     "turbo": "^2.5.4",
     "typescript": "5.8.2"
   },
+  "pnpm": {
+    "overrides": {
+      "typescript": "5.8.2"
+    }
+  },
   "packageManager": "pnpm@9.0.0",
   "engines": {
     "node": ">=18"
